--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>Лучший День Рождения </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<div id="header">
-				<span class="logo icon fa-paper-plane"></span>
+				<span></span>
 				<h1>Привет. Это Денис.</h1>
 				<p> И я хочу поздравить тебя с Днем Рождения</p>
 			</div>
@@ -37,21 +37,21 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-signal"><img src="images/pic011.jpg" alt="" /></a>
+						<a><img src="images/pic011.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Будь счастливой и здоровой</h3>
 							<p></p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<a><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Имей лучших в мире друзей</h3>
 							<p></p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
+						<a><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Постоянно развивайся и никогда не останавливайся</h3>
 							<p></p>
