--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a><img src="images/pic011.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-signal"><img src="images/pic011.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Будь счастливой и здоровой</h3>
 							<p></p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a><img src="images/pic02.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-signal"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Имей лучших в мире друзей</h3>
 							<p></p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-signal"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Постоянно развивайся и никогда не останавливайся</h3>
 							<p></p>
