--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>Я желаю тебе побольше счастья счастья 
+					<h2>Я хочу пожелать тебе всего самого лучшеего, что только есть в этом мире. Но три вещи хочу пожелать отдельно.  
 					<br />
 					may or may not seriously
 					<br />
@@ -40,21 +40,21 @@
 						<a href="#" class="image icon"><img src="images/pic011.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Будь счастливой и здоровой</h3>
-							<p></p>
+							<p>А еще терпеливой и спокойной, чтобы не смотря на все говницо в этом мире, ты всегда была на позитиве</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon "><img src="images/pic022.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Имей лучших в мире друзей</h3>
-							<p></p>
+							<p>Таких, которые сегодня пришли на этот праздник</p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="#" class="image icon"><img src="images/pic033.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Постоянно развивайся и никогда не останавливайся</h3>
-							<p></p>
+							<p>Для получения приза отправь "Я молодец" на номер 89811692098</p>
 						</div>
 					</section>
 				</div>
