--- a/index.html
+++ b/index.html
@@ -24,15 +24,8 @@
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>Я хочу пожелать тебе всего самого лучшеего, что только есть в этом мире. Но три вещи хочу пожелать отдельно.  
-					<br />
-					may or may not seriously
-					<br />
-					break the universe</h2>
-					<!--
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
+					<h2>Я хочу пожелать тебе всего самого лучшеего, что только есть в этом мире. Но три вещи хочу пожелать отдельно. </h2>
+					
 				</header>
 
 				<div class="box alt container">
