--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<a href="#" class="image icon "><img src="images/pic022.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Имей лучших в мире друзей</h3>
-							<p>Таких, которые сегодня пришли на этот праздник</p>
+							<p>И постоянно знакомься с новыми </p>
 						</div>
 					</section>
 					<section class="feature left">
